force-app/main/default/objects/CS_Floor_Plan__c/CS_Floor_Plan__c.object-meta.xml
<CustomObject>
    <label>Floor Plan</label>
    <nameField>
        <displayFormat>FP-{0000}</displayFormat>
        <label>Floor Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Floor Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>