force-app/main/default/objects/CS_Floor_Plan__c/fields/Plan_Floor_From__c.field-meta.xml
<CustomField>
    <fullName>Plan_Floor_From__c</fullName>
    <label>Plan Floor # From</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>