force-app/main/default/objects/CS_Floor_Plan__c/fields/Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Unit_Type__c</fullName>
    <label>Unit Type</label>
    <type>TextArea</type>
</CustomField>